# cynic-missing-extensions-mre

./: Cargo.toml  README.md  build.rs
src/: broken-client.rs  query.rs  schema.rs  server.rs  working-client.rs
