[package]
name = "cynic-missing-extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
cynic = { version = "3.4.3", features = ["rkyv", "http-reqwest"] }
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
cynic-codegen = { version = "3.4.3", features = ["rkyv"] }

[[bin]]
name = "server"
path = "src/server.rs"


[[bin]]
name = "broken-client"
path = "src/broken-client.rs"


[[bin]]
name = "working-client"
path = "src/working-client.rs"
